# telegram-bot

./: .dockerignore  .env.multitenant.example  .env.production.example  .env.template  .gitignore  CLAUDE.md  Dockerfile  MULTICRYPTO_IMPLEMENTATION.md  Makefile  README.md  agents.md  docker-compose.dev.yml  docker-compose.multitenant.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.sh  setup.sh  test_all.py  todo.md
.context/: guidelines.md  substrate.md
.context/architecture/: dependencies.md  overview.md  patterns.md  saas-multi-tenant.md
.context/auth/: integration.md  overview.md  security.md
.context/commands/: admin.md  examples.md  user.md
.context/database/: encryption.md  models.md  schema.md
.context/infrastructure/: deployment.md  overview.md  terraform.md
.context/payments/: integration.md  overview.md  security.md
.github/workflows/: deploy.yml  docker-publish.yml  tests.yml
bot/: __init__.py  config.py  error_handler.py  health.py  keyboards.py  logging_config.py  main.py  main_multitenant.py  models.py  models_multitenant.py  tasks.py  tasks_multitenant.py
bot/api/: __init__.py  auth.py  main.py
bot/handlers/: __init__.py  admin.py  user.py
bot/services/: __init__.py  bitcoin_payment.py  blockchain_api.py  bot_manager.py  catalog.py  commission.py  crypto_swap.py  currency.py  ethereum_payment.py  etherscan_api.py  multicrypto_orders.py  orders.py  payment_factory.py  payment_protocol.py  payments.py  payout.py  postage.py  tenant.py  vendors.py
terraform/: .gitignore  cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: TEST_COVERAGE.md  conftest.py
tests/e2e/: __init__.py  test_customer_purchase_flow.py  test_multitenant_api_flow.py  test_payment_processing_flow.py  test_vendor_management_flow.py
tests/integration/: test_app.py  test_multicrypto_flow.py  test_user_flows.py
tests/unit/: test_api.py  test_api_endpoints.py  test_bitcoin_payment.py  test_bot_manager.py  test_catalog.py  test_commission_service.py  test_config.py  (+24 more)
