[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram ecommerce bot"
authors = ["Example <example@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^20.3"
sqlmodel = "^0.0.8"
PyNaCl = "^1.5"
pydantic = "^1.10"
pyotp = "^2.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"
ruff = "^0.0.282"
mypy = "^1.4"

[tool.ruff]
line-length = 88

[tool.coverage.run]
branch = true
source = ["bot"]
omit = ["bot/handlers/*"]

[tool.pytest.ini_options]
addopts = "--cov=bot --cov-branch --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
